# budgie-desktop-examples

./: .gitignore  LICENSE  Makefile.am  README.md  common.mk  configure.ac  update_format.sh
c_project/: Makefile.am  NativeApplet.c  NativeApplet.h  NativeApplet.plugin  NativePanelApplet.c  applet.c  applet.h  plugin.c  plugin.h
python_project/: Makefile.am  PyShowDesktop.plugin  pyshowdesktop.py
python_project/pyshowdesktop/: __init__.py
vala_project/: Makefile.am  ValaApplet.plugin  ValaApplet.vala
